test/scripts/fixtures/unknown_pragma_sol_cli_output.txt
Warning: SPDX license identifier not provided in source file. Before publishing, consider adding a comment containing "SPDX-License-Identifier: <SPDX-License>" to each source file. Use "SPDX-License-Identifier: UNLICENSED" for non-open-source code. Please see https://spdx.org for more information.
--> syntaxTests/pragma/unknown_pragma.sol

Error: Unknown pragma "thisdoesntexist"
--> syntaxTests/pragma/unknown_pragma.sol:1:1:
|
1 | pragma thisdoesntexist;
| ^^^^^^^^^^^^^^^^^^^^^^^

Warning: Source file does not specify required compiler version! Consider adding "pragma solidity ^0.8.0;"
--> syntaxTests/pragma/unknown_pragma.sol
